fixing dest platforms

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ Source Platform:&nbsp;<select id="source-platform">
 <option value="vba">Visual Boy Advance</option>
 </select><br>
 Destination Platform:&nbsp;<select id="destination-platform">
-<option value="nes-snes">NES/SNES</option>
+<option value="nesSnes">NES/SNES</option>
 <option value="gb" selected>Game Boy/SGB2/GBP/GBi</option>
-<option value="sgb-ntsc">Super Game Boy (NTSC)</option>
-<option value="sgb-pal">Super Game Boy (PAL)</option>
-<option value="3dsvc">3DS Virtual Console</option>
+<option value="sgbNtsc">Super Game Boy (NTSC)</option>
+<option value="sgbPal">Super Game Boy (PAL)</option>
+<option value="threeDsvc">3DS Virtual Console</option>
 <option value="vba">Visual Boy Advance</option>
 </select><br>
 Converted Time:&nbsp;<input type="text" id="destination-time" size="10" readonly/></p>
